--- a/css/Main-page.css
+++ b/css/Main-page.css
@@ -10,30 +10,39 @@
     background-color: rgba(17, 16, 17, 0.56);
     padding: 0 250px;
 }
+.Text-content
+{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: white;
+}
 @media screen and (max-width: 900px){
     .blur{
         padding: 0 100px;
     }
 }
 
-@media screen and (max-width: 500px){
+
+@media screen and (max-width: 700px){
     .blur{
         padding: 0 50px;
     }
+    .Text-content
+{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: center;
+    color: white;
+}
 }
 .btn-blur{
     box-shadow: 0px 0px 25px -5px #525252;
 }
 
-.Text-content
-{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: white;
-}
+
 
 .button-open
 {   
@@ -53,7 +62,11 @@
     }
 
 
-
+    @media screen and (min-width: 900px){
+        .button-open{
+            margin-top: 130px;
+        }
+    }
 
   .button-open:link,
 .button-open:visited {
