--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root{
     --text-color-standart:#363636f5;
-    --bg-color:#D1D646;
+    --bg-color:#edf260;
     --navbg-color:#f97068;
     --artbg-color:#f8f8f8;
     --nav-text-color:white;
